# etl-file-loader

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  fileloader  main.py  pyproject.toml  todo.txt
docker/: sqlserver-init.sql
src/: exceptions.py  logging_conf.py  settings.py  utils.py
src/cli/: main.py
src/exception/: base.py  exceptions.py
src/file_helper/: aws_file_helper.py  aws_wrapper.py  azure_file_helper.py  azure_wrapper.py  base.py  factory.py  file_helper.py  gcp_file_helper.py  gcp_wrapper.py
src/notify/: base.py  email.py  factory.py  slack.py  webhook.py
src/pipeline/: db_utils.py  model_utils.py  runner.py
src/pipeline/audit/: auditor.py  base.py  bigquery.py  factory.py  mssql.py  mysql.py  postgresql.py  sqlite.py
src/pipeline/delete/: base.py  bigquery.py  factory.py  mssql.py  mysql.py  postgresql.py  sqlite.py
src/pipeline/publish/: base.py  bigquery.py  factory.py  mssql.py  mysql.py  postgresql.py  sqlite.py
src/pipeline/read/: base.py  csv.py  excel.py  factory.py  json.py  parquet.py
src/pipeline/validate/: validator.py
src/pipeline/write/: base.py  bigquery.py  factory.py  mssql.py  mysql.py  postgresql.py  sqlite.py
src/process/: db.py  file_helper.py  log.py  processor.py
src/sources/: base.py  master.py  registry.py
src/tests/: conftest.py  test_csv.py  test_excel.py  test_gzip.py  test_json.py  test_notifications.py  test_parquet.py
src/tests/fixtures/: csv_files.py  excel_files.py  json_files.py  parquet_files.py  sources.py
src/tests/test_archive/: ledger_2024.parquet
(+4 files in other folders)
