[project]
name = "better-file-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.36.0",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
    "boto3>=1.41.2",
    "email-validator>=2.3.0",
    "google-cloud-storage>=3.6.0",
    "ijson>=3.4.0.post0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-jinja2>=0.59b0",
    "opentelemetry-instrumentation-psycopg>=0.59b0",
    "opentelemetry-instrumentation-pymysql>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "opentelemetry-instrumentation-urllib>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-semantic-conventions>=0.59b0",
    "pendulum>=3.1.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.12.0",
    "pyexcel>=0.7.4",
    "pyexcel-xls>=0.7.1",
    "pyexcel-xlsx>=0.6.1",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "pythonnet>=3.0.5",
    "rich>=14.2.0",
    "slack-sdk>=3.38.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
    "xxhash>=3.6.0",
]

[project.scripts]
fileloader = "src.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
    "scalene>=1.5.55",
]
